--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "migrate": "tsx supabase-migrate.ts"
   },
   "dependencies": {
+    "@playwright/test": "^1.58.0",
     "@supabase/supabase-js": "^2.91.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.12",
